--- a/web/app/components/hero/swipable_component.html.erb
+++ b/web/app/components/hero/swipable_component.html.erb
@@ -38,7 +38,7 @@
 				<% end %>
 				<% if current_stage == :end_train_message %>
 					<div class="animate-show bg-brand-100 flex flex-col h-full items-center justify-center my-auto p-5 rounded-xl space-y-5 text-center">
-						<div id="end-message-title" class="px-5 text-brand-700">
+						<div id="end-message-title" class="font-semibold max-w-md px-5 text-gray-900">
 							<div class="font-bold"><%= "Obrigado #{@user.first_name}!" %></div>
 							<div class="font-light">Agora já consigo recomendar eventos parecidos com seu gosto pessoal.</div>
 						</div>
@@ -75,7 +75,7 @@
 				<% end %>
 				<% if current_stage == :end_suggestions_message %>
 					<div class="animate-show bg-brand-100 flex flex-col h-full items-center justify-center my-auto p-5 rounded-xl space-y-5 text-center text-gray-800">
-						<div id="end-message-title" class="font-semibold px-5 text-gray-600">
+						<div id="end-message-title" class="font-semibold max-w-md px-5 text-gray-900">
 							<%= "Você já viu todas as recomendações que eu tinha para você hoje 😃" %>
 						</div>
 						<%= content_tag :div, data: { reflex: 'click->Swipable#hide_swipable' }, class: 'px-4 py-2 font-semibold text-white bg-brand-500 rounded-full cursor-pointer' do %>
