--- a/web/app/views/layouts/_top-app-bar.html.erb
+++ b/web/app/views/layouts/_top-app-bar.html.erb
@@ -50,7 +50,7 @@
 					<%= content_for(:top_app_bar_title) %>
 				</div>
 			<% elsif props[:visible][:logo] %>
-				<a class="relative inline-block mx-auto  md:ml-0" href="<%= root_path %>">
+				<a class="inline-block relative mx-auto transition-transform md:transform md:hover:scale-105 md:ml-0" href="<%= root_path %>">
 					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 822.44 181" class="h-8">
 						<defs/>
 						<g style="isolation:isolate">
@@ -67,7 +67,7 @@
 		</div>
 		<% if !current_user && controller_name == 'feeds' %>
 			<%= link_to new_user_session_path, class: 'md:hidden my-auto w-8' do %>
-				<svg class="float-right stroke-current text-gray-600 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+				<svg class="float-right w-6 text-gray-600 stroke-current" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
 					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 16l-4-4m0 0l4-4m-4 4h14m-5 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h7a3 3 0 013 3v1"></path>
 				</svg>
 			<% end %>
@@ -77,7 +77,7 @@
 		<div class="<%= class_names('col-span-12 md:col-span-3 md:px-3',
 																{ 'hidden md:block': controller_name != 'search' }) %>">
 			<form
-				class="flex items-center h-full px-2 md:px-0 rounded"
+				class="flex items-center px-2 h-full rounded md:px-0"
 				data-controller="search"
 				data-search-target="search"
 				data-reflex-permanent
@@ -92,12 +92,12 @@
 				<!--				</svg>-->
 				<input autocomplete="false"
 							 name="q"
-							 class="bg-brand-100 focus:bg-white focus:border-transparent focus:outline-none focus:ring focus:ring-brand-500 font-light h-10 mx-auto placeholder-brand-400 focus:placeholder-brand-600 px-4 py-1 rounded-full text-xs w-full"
+							 class="py-1 px-4 mx-auto w-full h-10 text-xs font-light rounded-full bg-brand-100 focus:bg-white focus:border-transparent focus:outline-none focus:ring focus:ring-brand-500 placeholder-brand-400 focus:placeholder-brand-600"
 							 id="text-field-shape-one"
 							 placeholder="Busque por rock, feira de rua, samba, standup..."
 							 type="text"
 							 data-search-target="input">
-				<input class="bg-brand-500 cursor-pointer font-light font-semibold h-10 md:hidden ml-3 my-1 px-4 rounded text-white"
+				<input class="px-4 my-1 ml-3 h-10 font-light font-semibold text-white rounded cursor-pointer bg-brand-500 md:hidden"
 							 type="submit" value="Buscar"
 							 data-search-target="submit"
 							 data-action="click->search#searching"/>
@@ -105,7 +105,7 @@
 		</div>
 	<% end %>
 	<div class="hidden md:inline-block md:col-span-3">
-		<div class="flex items-center justify-end h-full">
+		<div class="flex justify-end items-center h-full">
 			<% unless current_page?('/users/sign_up') || current_page?('/users/sign_in') %>
 				<% if current_user %>
 					<% unless controller_name == 'users' && action_name == 'show' %>
@@ -114,7 +114,7 @@
 								<%= image_tag(current_user.picture, { class: "w-8 h-8 rounded-full", alt: current_user&.name, onerror: "this.style.opacity='0'" }) rescue nil %>
 							<% end %>
 						<% else %>
-							<div class="w-8 h-8 mr-2 bg-gray-100 rounded-full"></div>
+							<div class="mr-2 w-8 h-8 bg-gray-100 rounded-full"></div>
 						<% end %>
 					<% end %>
 					<%#= link_to('Sair', destroy_user_session_path, method: :delete, class: 'hidden md:inline-block text-gray-500 font-sm') %>
