--- a/web/app/components/main_sidebar/horizontal_event_component.html.erb
+++ b/web/app/components/main_sidebar/horizontal_event_component.html.erb
@@ -72,7 +72,7 @@
 				<span class="hidden md:inline">
 						·
 				</span>
-				<span class="hidden font-semibold md:inline text-brand-600">
+				<span class="hidden font-medium md:inline text-brand-600">
 					<%= link_to @event&.categories_display_name&.titleize, category_events_path(@event.categories_url), data: { 'turbo-preserve-scroll': true }, class: 'md:hover:text-brand-600' %>
 				</span>
 				<span>
