--- a/web/app/components/movies_component.html.erb
+++ b/web/app/components/movies_component.html.erb
@@ -23,7 +23,7 @@
 		</div>
 		<div data-slider-target="scroller"
 				 data-persist-horizontal-scroll-target="scroller"
-				 class="border px-5 py-5 rounded-lg scrollx">
+				 class="md:border md:px-5 md:py-5 py-2 rounded-lg scrollx">
 			<div class="px-5 md:px-0 grid grid-flow-col gap-2 w-content grid-after-margin">
 				<% @movies.each do |movie| %>
 					<div class="flex flex-col w-24 transition-transform transform group md:hover:scale-105">
