Adjust style for users#show

--- a/web/app/components/movies_component.html.erb
+++ b/web/app/components/movies_component.html.erb
@@ -32,7 +32,7 @@
 								loading: :lazy,
 								title:   movie.title,
 								alt:     "Filme #{movie.title}",
-								class:   'border shadow-sm group-hover:shadow bg-white object-center object-cover rounded',
+								class:   'border shadow-sm group-hover:shadow bg-gray-100 object-center object-cover rounded',
 								style:   'min-height: 145px',
 								onerror: "this.style.opacity='0'"
 							} rescue nil %>
