--- a/web/app/views/layouts/_top-app-bar.html.erb
+++ b/web/app/views/layouts/_top-app-bar.html.erb
@@ -21,14 +21,14 @@
 	<div class="<%= class_names 'flex md:relative md:col-span-2 h-full',
 															'space-x-4': content_for?(:top_app_bar_title) %>">
 		<% if mobile_device? %>
-			<div class="my-auto text-gray-600 md:hidden">
+			<div class="my-auto text-gray-800 md:hidden">
 				<% if props[:visible][:back_button] %>
 					<a data-controller="ripple"
 						 onclick="TurboModule.backHistory()"
 						 class="relative select-none ripple ripple-black tap-highlight-none"
 						 aria-label="Voltar">
-						<svg class="h-4 fill-current md:w-auto" viewBox="0 0 21 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-							<path d="M10.5 17L1.5 9M1.5 9L10.5 1M1.5 9H20" stroke="#4A5568" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+						<svg class="h-4 fill-current stroke-current md:w-auto" viewBox="0 0 21 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path d="M10.5 17L1.5 9M1.5 9L10.5 1M1.5 9H20" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
 						</svg>
 					</a>
 				<% else %>
@@ -46,7 +46,7 @@
 		<div class="<%= class_names 'h-full inline-flex items-center flex-auto md:pr-0',
 																'hidden': !props[:visible][:logo] %>">
 			<% if mobile_device? && content_for?(:top_app_bar_title) %>
-				<div class="font-semibold text-gray-600">
+				<div class="font-semibold text-gray-800">
 					<%= content_for(:top_app_bar_title) %>
 				</div>
 			<% elsif props[:visible][:logo] %>
