Fix categories filter and feeds#index y spacing

--- a/web/app/components/hero/swipable_component.html.erb
+++ b/web/app/components/hero/swipable_component.html.erb
@@ -12,7 +12,7 @@
 							</div>
 							<div class="c-span">
 								Para receber sugestões personalizadas, indique ao menos
-								<span class="text-brand-500 font-bold"><%= @min_events_to_train - events_trained %> eventos</span>
+								<span class="text-brand-600 font-medium"><%= @min_events_to_train - events_trained %> eventos</span>
 								que você curte.
 							</div>
 						</div>
