--- a/web/app/views/organizers/show.html.erb
+++ b/web/app/views/organizers/show.html.erb
@@ -13,21 +13,20 @@
   [
     <%= render partial: 'layouts/json_ld', collection: @events, as: :event %>
   ]
-	
 	</script>
 
 	<div class="grid grid-cols-12 gap-0 mx-auto max-w-screen-lg md:gap-10">
 		<div class="col-span-12 md:col-span-4">
-			<div class="overflow-hidden sticky top-24 mx-auto space-y-3 is-animated md:border md:border-gray-100 md:rounded-xl md:shadow-lg md:max-w-screen-sm sm:container">
+			<div class="overflow-hidden sticky top-28 mx-auto space-y-3 is-animated md:border md:rounded-lg md:max-w-screen-sm sm:container">
 				<div class="p-6 space-y-5 bg-white rounded-md">
 					<div class="flex items-center space-x-5">
 						<%= image_tag shrine_image_url(@organizer, :sm), {
 							loading: :lazy,
-							class:   'w-12 h-12 max-w-xs mx-auto rounded-full shadow-sm border border-gray-100',
+							class:   'border border-gray-100 flex-shrink-0 h-12 max-w-xs mx-auto rounded-full shadow-sm w-12',
 							onerror: "this.style.opacity='0'"
 						} if @organizer.image_data? %>
 						<div class="flex-grow">
-							<h1 class="flex-1 mb-2 font-bold leading-tight text-gray-900 font-display group-hover:text-brand-500 md:pl-0">
+							<h1 class="mb-3 c-h3">
 								<%= @organizer.details_name %>
 							</h1>
 							<%= render(FollowButtonComponent.new(
@@ -39,16 +38,16 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-span-12 pt-5 space-y-10 md:col-span-8">
+		<div class="col-span-12 space-y-12 md:col-span-8">
 			<div class="overflow-hidden mx-auto space-y-3 is-animated md:rounded-2xl md:max-w-screen-sm sm:container">
-				<h2 class="px-5 pb-2 text-xl font-bold text-gray-900 font-display">Próximos eventos</h2>
+				<h2 class="px-5 pb-2 c-h2">Próximos eventos</h2>
 				<%= render MainSidebar::GroupByDayListComponent.new events: @upcoming_events, user: current_user %>
 			</div>
 
 			<% if @past_events.present? %>
 				<div class="overflow-hidden mx-auto space-y-3 is-animated md:rounded-2xl md:max-w-screen-sm sm:container">
-					<h2 class="px-5 pb-2 text-xl font-bold text-gray-900 font-display">Eventos passados</h2>
-					<div class="grid grid-cols-12 px-5 opacity-75">
+					<h2 class="px-5 pb-2 c-h2">Eventos passados</h2>
+					<div class="grid grid-cols-12 gap-6 px-5">
 						<% @past_events.each do |event| %>
 							<div class="flex col-span-12 justify-between py-3 md:col-span-6 md:border-0">
 								<div class="pr-6">
@@ -59,26 +58,22 @@
 																		url:        event_path(event),
 																		'event-id': event.id
 																	},
-																	class: 'md:hover:underline inline-block md:text-sm font-semibold mb-1 leading-snug text-gray-600' do %>
+																	class: 'md:hover:underline inline-block md:text-sm font-medium mb-1 leading-snug text-gray-600' do %>
 										<%= event.name %>
 									<% end %>
 								</div>
-								<div>
-									<div data-controller="ripple" class="overflow-hidden relative w-24 rounded shadow-xs ripple ripple-white">
-										<%= link_to event_path(event),
-																data: {
-																	action:     'click->main-sidebar--horizontal-event#openEvent',
-																	'event-id': event.id
-																} do %>
-											<div class="bg-gray-50 aspect-ratio-16/9"></div>
-											<%= image_tag shrine_image_url(event, :feed), {
-												loading: :lazy,
-												class:   'absolute cursor-pointer h-full left-0 object-center object-cover top-0 w-full overflow-hidden',
-												onerror: "this.style.opacity='0'"
-											} rescue nil %>
-										<% end %>
-									</div>
-								</div>
+								<%= link_to event_path(event),
+														data:  {
+															action:     'click->main-sidebar--horizontal-event#openEvent',
+															'event-id': event.id
+														},
+														class: 'inline-block flex-shrink-0 cursor-pointer h-16 w-16' do %>
+									<%= image_tag shrine_image_url(event, :feed), {
+										loading: :lazy,
+										class:   'h-full object-center object-cover overflow-hidden rounded-lg w-full',
+										onerror: "this.style.opacity='0'"
+									} rescue nil %>
+								<% end %>
 							</div>
 						<% end %>
 					</div>
